syntax = "proto3";

option java_package = "com.etf.grpc";

service korisnik{
    rpc login(LoginRequest)  returns (KorisnikAPIResponse);
    rpc logout(Empty)  returns (KorisnikAPIResponse);
}

message LoginRequest{
       string username = 1 ;
       string password = 2 ;
       int64 role = 3 ;
}

message KorisnikAPIResponse{
      string responsemessage = 1;
      int32  responseCode  = 2;
}

message Empty{
}